Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2951

lnet_try_match_md()) Matching packet from 12345-10.10.17.9@tcp, match 1429230968490588 length 65928 too big: 117674 left, 49386 allowed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.4.0
    • Lustre 2.4.0
    • 3
    • 7084

      This issue was created by maloo for Li Wei <liwei@whamcloud.com>

      This issue relates to the following test suite run: https://maloo.whamcloud.com/test_sets/9e87cad2-8b22-11e2-965f-52540035b04c.

      The sub-test test_102ha failed with the following error:

      test failed to respond and timed out

      Info required for matching: sanity 102ha

      The MDS was dropping requests, while the client was repeatedly reconnecting until Autotest timed out:

      10:38:21:LNetError: 3022:0:(lib-ptl.c:190:lnet_try_match_md()) Matching packet from 12345-10.10.17.9@tcp, match 1429230968490588 length 65928 too big: 117674 left, 49386 allowed
      10:39:14:Lustre: lustre-MDT0000: Client 8aa83ecb-c95c-6b87-53ec-3d81990549d0 (at 10.10.17.9@tcp) reconnecting
      

            liwei Li Wei (Inactive)
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: