LU-2951 mdt: Bump default portal's max req size for SETXATTR

During large EA tests, this was seen on the MDS for SETXATTR:

  10:38:21:LNetError: 3022:0:(lib-ptl.c:190:lnet_try_match_md())
  Matching packet from 12345-10.10.17.9@tcp, match 1429230968490588
  length 65928 too big: 117674 left, 49386 allowed

This patch rises the maximum request size for MDS_REQUEST_PORTAL to
fit SETXATTR requests with maximum names and values.

Change-Id: Ifdcda6d3e91aa6115e5cafd5abd6c89b15485020
Signed-off-by: Li Wei <wei.g.li@intel.com>